--- a/src/scss/withdraw.scss
+++ b/src/scss/withdraw.scss
@@ -110,3 +110,75 @@
 		}
 	}
 }
+
+.withdraw-modal {
+	background-color:rgba(0,0,0,0.5);
+	.modal-dialog {
+		width: 520px;
+		height: 440px;
+	}
+
+	.modal-title {
+		text-align: center;
+		font-size: 18px;
+		font-weight: 400;
+		padding-top: 6px;
+		line-height: 1;
+	}
+
+	.modal-content {
+		width: 100% !important;
+
+		.modal-body {
+			width: 440px;
+			margin: 0 auto;
+			border-top: 1px solid #E6E6E6;
+			padding-top: 25px;
+
+			.item {
+				margin-left: 115px;
+				margin-bottom: 30px;
+				line-height: 1;
+				font-size: 14px;
+
+				.label {
+					color: #999999;
+				}
+
+				.success {
+					color: #3EBC00;
+				}
+
+				.cost {
+					font-size: 12px;
+					color: #999999;
+				}
+			}
+
+			.btn-group {
+				display: flex;
+				justify-content: center;
+				margin-top: 45px;
+
+				button {
+					width: 100px;
+					height: 36px;
+				}
+
+				.submit {
+					margin-right: 20px;
+				}
+
+				.cancel {
+					background-color: #F4F4F4;
+					border: none;
+				}
+			}
+		}
+	}
+}
+
+
+.success-modal{
+	background-color: rgba(51, 51, 51, 0.5);
+}
