--- a/src/scss/betRecord.scss
+++ b/src/scss/betRecord.scss
@@ -46,18 +46,28 @@
 			background-color: #fff;
 
 			.datepicker-group {
-				display: flex;
-				align-items: center;
-				height: 100px;
-				padding: 0 100px;
+				height: 160px;
+				padding: 15px 100px;
 				border-bottom: 1px solid #E6E6E6;
+
+				.row {
+					display: flex;
+					align-items: center;
+					margin-bottom: 15px;
+				}
+				.search{
+					display: block;
+					margin: 0 auto;
+				}
 
 				.item {
 					display: flex;
 					align-items: center;
-					margin-right: 40px;
+					min-width: 240px;
+					margin-right: 30px;
 
 					label {
+						width: 60px;
 						font-size: 14px;
 						margin-right: 13px;
 					}
@@ -68,6 +78,16 @@
 					}
 
 					.time-box {
+						width: 150px;
+					}
+
+					.radio-wrap {
+						display: flex;
+						align-items: center;
+						margin-right: 10px;
+						font-size: 14px;
+					}
+					.select {
 						width: 150px;
 					}
 
@@ -88,10 +108,11 @@
 						border-bottom: 1px solid #f0f0f0;
 						font-size: 14px;
 
-						.label{
+						.label {
 							color: #808080;
 						}
-						.st{
+
+						.st {
 							margin-right: 10px;
 						}
 					}
@@ -99,6 +120,7 @@
 
 				.r-list {
 					border-top: 1px dashed #f0f0f0;
+
 					.r-item {
 						display: flex;
 						align-items: center;
@@ -119,22 +141,27 @@
 							font-size: 14px;
 							text-align: center;
 						}
-						.text{
+
+						.text {
 							flex: 1;
 							font-size: 14px;
 						}
-						.des{
+
+						.des {
 							margin-bottom: 8px;
 						}
-						.time{
+
+						.time {
 							font-size: 12px;
-							color:#808080;
+							color: #808080;
 						}
-						.amount{
+
+						.amount {
 							font-size: 14px;
 							margin-right: 28px;
 						}
-						a{
+
+						a {
 							color: #1A8CFF;
 							font-size: 14px;
 						}
@@ -145,17 +172,19 @@
 	}
 }
 
-.bet-detail{
+.bet-detail {
 	background-color: #fff;
 	margin-top: 20px;
 	margin-bottom: 60px;
 	padding-top: 34px;
 	min-height: 760px;
-	.bd-list{
+
+	.bd-list {
 		width: 560px;
 		margin: 0 auto;
 		font-size: 14px;
-		.bd-item{
+
+		.bd-item {
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
@@ -165,7 +194,7 @@
 	}
 }
 
-.no-record{
+.no-record {
 	width: 124px;
 	height: 124px;
 	margin: 0 auto;
@@ -176,5 +205,5 @@
 	color: #9DB9D1;
 	background: url("../img/norecord-icon.png") no-repeat;
 	background-size: 80px;
-	background-position: center 10px;	
+	background-position: center 10px;
 }
