--- a/src/scss/boundPhone.scss
+++ b/src/scss/boundPhone.scss
@@ -6,10 +6,12 @@
 		.item {
 			font-size: 14px;
 			margin-left: 252px;
-			label{
+
+			label {
 				display: inline-block;
 				width: 48px;
 			}
+
 			input {
 				width: 264px;
 				height: 36px;
@@ -45,17 +47,48 @@
 			line-height: 1;
 		}
 	}
-	.tip{
-		font-size:12px;
+
+	.tip {
+		font-size: 12px;
 		color: #999999;
 		line-height: 1;
 		margin-bottom: 10px;
 		margin-left: 371px;
 	}
-	.sub-tip{
-		font-size:12px;
+
+	.sub-tip {
+		font-size: 12px;
 		color: #999999;
 		line-height: 1;
 		margin-left: 317px;
+	}
+}
+
+.binding-phone,
+.binding-email {
+	.bind-after {
+		margin-top: 58px;
+
+		.p-info {
+			text-align: center;
+			font-size: 16px;
+			color: #333;
+			margin-bottom: 10px;
+		}
+
+		.p-tip {
+			text-align: center;
+			font-size: 12px;
+			color: #666666;
+			margin-bottom: 38px;
+		}
+
+		button {
+			display: block;
+			margin: 0 auto;
+			width: 128px;
+			height: 30px;
+		}
+
 	}
 }
