--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1386,3 +1386,15 @@ footer {
 		}
 	}
 }
+
+// 错误信息框
+.yg-error{
+	display: inline-block;
+	padding-left: 18px;
+	background: url('../img/commonsprite.png') no-repeat;
+	background-position: 0px -25px;
+	margin-left: 12px;
+	font-size: 12px;
+	line-height: 14px;
+	color: red;
+}
