--- a/src/scss/registAgent.scss
+++ b/src/scss/registAgent.scss
@@ -22,7 +22,7 @@
 
 			.text {
 				display: block;
-				width: 60px;
+				width: 80px;
 				margin-right: 30px;
 			}
 
@@ -38,6 +38,8 @@
 			}
 
 			.code-btn {
+				width: 82px;
+				text-align: center;
 				border-color: #1A8CFF;
 				color: #1A8CFF;
 			}
