--- a/src/include/siteTool.html
+++ b/src/include/siteTool.html
@@ -12,7 +12,7 @@
         <li class="dh">
             <a href="">电话<br />客服</a>
         </li>
-        <li class="db">
+        <li class="db" id="toTopBtn">
             <span class="to-top">返回<br />顶部</span>
         </li>
     </ul>
