--- a/src/scss/betRecord.scss
+++ b/src/scss/betRecord.scss
@@ -83,6 +83,7 @@
 
 					.radio-wrap {
 						display: flex;
+						width: 70px;
 						align-items: center;
 						margin-right: 10px;
 						font-size: 14px;
