--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1123,7 +1123,7 @@ footer {
 			justify-content: space-between;
 			margin-bottom: 14px;
 
-			#verCode {
+			.input {
 				width: 172px;
 				height: 36px;
 				font-size: 12px;
