--- a/src/include/header.html
+++ b/src/include/header.html
@@ -2,8 +2,8 @@
     <nav class="top">
         <div class="container center-block">
             <ul class="left">
-                <li class="szsy"><a href="#">设为首页</a></li>
-                <li class="scbz"><a href="#">收藏本站</a></li>
+                <li class="szsy" id="setHome"><a href="javascript:void(0)">设为首页</a></li>
+                <li class="scbz" id="addFavorite"><a href="javascript:void(0)">收藏本站</a></li>
                 <li class="yyxz"><a href="#">语言选择</a></li>
                 <li class="xz"><a href="appDown.html" target= "_blank">永高APP下载</a></li>
             </ul>
