--- a/src/scss/boundPhone.scss
+++ b/src/scss/boundPhone.scss
@@ -62,6 +62,23 @@
 		line-height: 1;
 		margin-left: 317px;
 	}
+
+	.set-success{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-size: 18px;
+		color: #333;
+		&::before{
+			content: "";
+			display: block;
+			width: 50px;
+			height: 50px;
+			background: url("../img/chognzhichenggong.png") no-repeat;
+			background-size: contain;
+			margin-right: 18px;
+		}
+	}
 }
 
 .binding-phone,
@@ -89,6 +106,5 @@
 			width: 128px;
 			height: 30px;
 		}
-
 	}
 }
