--- a/src/include/custServerSidebar.html
+++ b/src/include/custServerSidebar.html
@@ -1,6 +1,6 @@
 <ul class="sidebar">
 	<li class="item active">
-		<a href="passwordAppeal.html"><i class="icon mmss"></i>密码申诉</a>
+		<a href="resetLoginPsw.html"><i class="icon mmss"></i>密码申诉</a>
 	</li>
 	<li class="item">
 		<a href="accountAppeal.html"><i class="icon zhss"></i>账号申诉</a>
@@ -13,6 +13,9 @@
 	</li>
 	<li class="item">
 		<a href="protocol.html"><i class="icon yhxy"></i>用户协议</a>
+	</li>
+	<li class="item">
+		<a href="alliance.html"><i class="icon yhxy"></i>联盟方案</a>
 	</li>
 	<button class="service-btn"><a href="">在线客服</a></button>	
 	<button class="service-btn"><a href="">QQ客服</a></button>
