--- a/src/include/header.html
+++ b/src/include/header.html
@@ -5,12 +5,12 @@
                 <li class="szsy" id="setHome"><a href="javascript:void(0)">设为首页</a></li>
                 <li class="scbz" id="addFavorite"><a href="javascript:void(0)">收藏本站</a></li>
                 <li class="yyxz"><a href="#">语言选择</a></li>
-                <li class="xz"><a href="appDown.html" target= "_blank">永高APP下载</a></li>
+                <li class="xz"><a href="appDown.html" target= "_blank">TGP APP下载</a></li>
             </ul>
             <ul class="right">
                 <li class="login-btn"><a href="javascript:void(0)">登录</a></li>
                 <li class="regist-btn"><a href="javascript:void(0)">注册</a></li>
-                <li><a href="passwordAppeal.html">客服中心</a></li>
+                <li><a href="resetLoginPsw.html">客服中心</a></li>
                 <li><a href="#">免费试玩</a></li>
                 <div class="all-game-btn pull-left">
                     <a class="btn-text" href="javascript:void(0)">所有游戏</a>
@@ -45,7 +45,7 @@
                 <li class="xz"><a href="#">永高APP下载</a></li>
             </ul>
             <ul class="right">
-                <li><a href="#">账号：18848614754</a></li>
+                <li><a href="#">账号：<span class="acc">18848614754</span></a></li>
                 <li><a href="#">注销</a></li>
                 <li><a href="customerService.html">客服中心</a></li>
                 <li class="info-btn">
@@ -113,7 +113,7 @@
             <div class="search-rec">
                 <ul class="s-list">
                     <li class="s-item">
-                        <a href="#">
+                        <a href="12121">
                             <img src="img/sousuoyouxi.png" alt="" width="40" height="40">
                             <div class="s-cont">
                                 <span>真人视讯2</span>
