--- a/src/scss/userCenter.scss
+++ b/src/scss/userCenter.scss
@@ -112,12 +112,14 @@
 				margin-top: 20px;
 
 				button {
-					padding: 8px 20px;
+					width: 90px;
+					height: 30px;
 					margin-right: 10px;
 
 					a {
 						display: block;
 						height: 100%;
+						line-height: 28px;
 					}
 				}
 			}
