--- a/src/include/header2.html
+++ b/src/include/header2.html
@@ -5,7 +5,7 @@
 				<li class="szsy" id="setHome"><a href="javascript:void(0)">设为首页</a></li>
                 <li class="scbz" id="addFavorite"><a href="javascript:void(0)">收藏本站</a></li>
                 <li class="yyxz"><a href="#">语言选择</a></li>
-                <li class="xz"><a href="appDown.html" target= "_blank">永高APP下载</a></li>
+                <li class="xz"><a href="appDown.html" target= "_blank">TGP APP下载</a></li>
 			</ul>
 			<ul class="right">
 				<li><a href="#">登录</a></li>
