--- a/src/scss/activity.scss
+++ b/src/scss/activity.scss
@@ -1,4 +1,5 @@
 .activity {
+	width: 1186px;
 	min-height: 760px;
 	background-color: #fff;
 	margin-top: 20px;
@@ -7,20 +8,15 @@
 	.aty-list {
 		display: flex;
 		flex-wrap: wrap;
-		padding: 50px 64px;
+		padding: 50px 72px;
 
 		.aty-item {
 			position: relative;
-			width: 320px;
-			height: 140px;
+			width: 100%;
+			height: 134px;
 			overflow: hidden;
 			border-radius: 10px;
 			margin-bottom: 38px;
-
-			&:nth-of-type(3n-1) {
-				margin-left: 48px;
-				margin-right: 48px;
-			}
 
 			&:hover {
 				box-shadow: 0 3px 6px 0px rgba(123, 133, 151, 0.6);
@@ -62,7 +58,6 @@
 
 		.content {
 			font-size: 14px;
-			width: 642px;
 			margin: 0 auto;
 			line-height: 20px;
 		}
