--- a/src/scss/game.scss
+++ b/src/scss/game.scss
@@ -2,9 +2,26 @@
 	position: relative;
 	width: 100%;
 	height: 480px;
-	background: url("../img/game-banner1.png") no-repeat;
 	background-size: cover;
 	background-position: center top;
+	.swiper-container {
+		background-color: #fff;
+		min-width: 1200px;
+		height: 480px;
+	
+		.swiper-slide {
+			background-repeat: no-repeat;
+			background-position: center;
+			background-size: cover;
+	
+			a {
+				display: block;
+				width: 100%;
+				height: 100%;
+			}
+		}
+	}
+	
 	.b-info{
 		position: absolute;
 		display: flex;
@@ -16,7 +33,9 @@
 		height:24px;
 		line-height: 24px;
 		background-color:rgba(0,0,0,0.5);
-		p{
+		overflow: hidden;
+		z-index: 999;
+		a{
 			font-size:12px;
 			color:#fff;
 		}
@@ -53,6 +72,8 @@
 				margin-right:0;
 			}
 			.game-pic{
+				display: inline-block;
+				height: 110px;
 				border-radius: 20px;
 				box-shadow: 0 4px 8px 0 rgba(123, 133, 151,0.5);
 				&:hover{
