--- a/src/scss/myCard.scss
+++ b/src/scss/myCard.scss
@@ -13,6 +13,8 @@
 			width:282px;
 			height:98px;
 			background-color: #517ACD;
+			background-size: cover;
+			background-repeat: no-repeat;
 			color: #fff;
 			box-shadow:0px 2px 8px 0px rgba(26,40,87,0.2);
 			border-radius: 6px;
