--- a/src/scss/wdrRecordDetail.scss
+++ b/src/scss/wdrRecordDetail.scss
@@ -19,12 +19,14 @@
 		.item {
 			position: relative;
 			z-index: 2;
+			height: 84px;
 			color: #999999;
 
 			.text {
 				font-size: 14px;
 				margin-bottom: 10px;
 				line-height: 1;
+				text-align: center;
 			}
 
 			.circle {
@@ -34,6 +36,11 @@
 				background-color: #fff;
 				background-image: url('../img/wdrdetailsprite.png');
 				background-repeat: no-repeat;
+			}
+			.tip{
+				margin-top: 8px;
+				color: #999999;
+				font-size: 12px;
 			}
 
 			&:last-of-type {
@@ -46,16 +53,12 @@
 
 			.circle {
 				border-color: #1A8CFF;
-			}
-		}
-
-		.completed {
-			.circle {
 				background-position: 0px -41px;
 			}
 		}
 
 		.ing {
+			color: #1A8CFF;
 			.circle {
 				background-position: 0px 0px;
 			}
@@ -67,19 +70,42 @@
 			}
 		}
 
+		.cancel {
+			color: #E83A3A;
+			.circle {
+				background-image: url('../img/chuli.png');
+				background-repeat: no-repeat;
+				background-size: 36px;
+			}
+		}
+
 		.bar {
 			position: absolute;
 			width: 720px;
 			height: 2px;
 			left: 25px;
-			top: 62px;
+			top: 50px;
 			background-color: #E5E5E5;
 
 			.inline {
 				display: block;
 				height: 2px;
-				width: 50%;
 				background-color: #1A8CFF;
+			}
+		}
+		.process1{
+			.inline{
+				width: 0;
+			}
+		}
+		.process2{
+			.inline{
+				width: 50%;
+			}
+		}
+		.process3{
+			.inline{
+				width: 100%;
 			}
 		}
 	}
