--- a/src/include/footer.html
+++ b/src/include/footer.html
@@ -41,7 +41,7 @@
                     <li>技术安全保障措施</li>
                 </ul>
                 <div class="tip">广州格斗家有限公司 版权所有粤ICP备16012630号-2粤网文(2017)2191-007号</div>
-                <div class="tip">永高娱乐城 Copyright© 2018 永高 Casino Co.Group All Rights Reserved</div>
+                <div class="tip">TGP娱乐城 Copyright© 2018 TGP Casino Co.Group All Rights Reserved</div>
             </div>
             <div class="right">
                 <ul class="list">
