--- a/src/include/header.html
+++ b/src/include/header.html
@@ -42,7 +42,7 @@
                 <li class="szsy"><a href="#">设为首页</a></li>
                 <li class="scbz"><a href="#">收藏本站</a></li>
                 <li class="yyxz"><a href="#">语言选择</a></li>
-                <li class="xz"><a href="#">永高APP下载</a></li>
+                <li class="xz"><a href="#">TGPAPP下载</a></li>
             </ul>
             <ul class="right">
                 <li><a href="#">账号：<span class="acc">18848614754</span></a></li>
@@ -58,7 +58,7 @@
                                     <span class="tit">系统消息</span><span class="time">2019年01月07日</span>
                                 </div>
                                 <p class="text">
-                                    永高娱乐，APP安卓，ios系统全新上线啦新用户，百元大礼包等你来领，马上去下载
+                                    TGP娱乐，APP安卓，ios系统全新上线啦新用户，百元大礼包等你来领，马上去下载
                                     <a href="#">详情>></a>
                                 </p>
                             </div>
@@ -91,7 +91,7 @@
     <!-- 登陆后navtop END -->
 
     <nav class="main center-block">
-        <div class="brand"><img src="img/index/logo.png" alt="永高娱乐"></div>
+        <div class="brand"><img src="img/index/logo.png" alt="TGP娱乐"></div>
         <ul class="nav-list">
             <li class="active"><a href="index.html">首页</a></li>
             <li><a href="gameList.html">真人视讯</a></li>
